--- a/app/src/main/res/layout/list_item_app.xml
+++ b/app/src/main/res/layout/list_item_app.xml
@@ -1,16 +1,29 @@
-<FrameLayout
+<TableLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView_activity_name"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:padding="16dp"
-        android:paddingBottom="32dp"
-        android:layout_width="match_parent"
+    <TableRow
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Activity Label"/>
+        tools:ignore="UselessParent">                                                               <!-- to suppress code analysis warning -->
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/imageView_app_icon"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:contentDescription="@string/label_app_icon"
+            tools:src="@mipmap/ic_launcher"/>
+
+        <TextView
+            android:id="@+id/textView_app_name"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:padding="16dp"
+            android:paddingBottom="32dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Activity Label"/>
+
+    </TableRow>
+</TableLayout>
